Changed the application to have an improvised navigation (quickly switching between components/containers) to display information.
- App: instead of going directly to the UserBoard, now it goes to the ViewPresenter to display the application host. This initialises the screen reducer that will map/route the application to the expected container.
- ITypedAction is a first attempt to get type checking for the actions. Unfortunately, it does not work as I expected because the combineReducer is expecting an (S, AnyAction) => S which.. as you would expect, is an action<any>.
- Introduced a Screen reducer, which will give you the current screen to display.

--- a/samples/6.simpleredux/package.json
+++ b/samples/6.simpleredux/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-beta.5",
+    "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   },
   "jest": {
