--- a/samples/8.asyncredux/package.json
+++ b/samples/8.asyncredux/package.json
@@ -13,7 +13,8 @@
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.5",
 		"react-redux": "^5.0.6",
-		"redux": "^3.7.2"
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
