--- a/samples/8.asyncredux/package.json
+++ b/samples/8.asyncredux/package.json
@@ -10,10 +10,12 @@
 		"@types/react": "^16.0.18",
 		"@types/react-native": "^0.49.5",
 		"@types/react-redux": "^5.0.11",
+		"@types/redux-logger": "^3.0.5",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.5",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
