--- a/samples/12.tabnav/package.json
+++ b/samples/12.tabnav/package.json
@@ -12,6 +12,7 @@
         "@types/react-navigation": "^1.0.22",
         "react": "16.0.0",
         "react-native": "0.50.1",
+        "react-native-vector-icons": "^4.4.2",
         "react-navigation": "^1.0.0-beta.19"
     },
     "devDependencies": {
