--- a/samples/12.tabnav/package.json
+++ b/samples/12.tabnav/package.json
@@ -11,10 +11,12 @@
         "@types/react-native": "^0.50.2",
         "@types/react-native-vector-icons": "^4.4.2",
         "@types/react-navigation": "^1.0.22",
+        "@types/uuid": "^3.4.3",
         "react": "16.0.0",
         "react-native": "0.50.1",
         "react-native-vector-icons": "^4.4.2",
-        "react-navigation": "^1.0.0-beta.19"
+        "react-navigation": "^1.0.0-beta.19",
+        "uuid": "^3.1.0"
     },
     "devDependencies": {
         "babel-jest": "21.2.0",
