Was trying to avoid using react-native-vector-icons... but elements depends on vector icons... so added!

--- a/samples/18.infiniteScroll/package.json
+++ b/samples/18.infiniteScroll/package.json
@@ -10,9 +10,11 @@
 		"@types/react": "^16.0.25",
 		"@types/react-native": "^0.50.7",
 		"@types/react-native-elements": "^0.16.4",
+		"@types/react-native-vector-icons": "^4.4.2",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
-		"react-native-elements": "^0.18.2"
+		"react-native-elements": "^0.18.2",
+		"react-native-vector-icons": "^4.4.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
