--- a/samples/18.infiniteScroll/package.json
+++ b/samples/18.infiniteScroll/package.json
@@ -11,10 +11,12 @@
 		"@types/react-native": "^0.50.7",
 		"@types/react-native-elements": "^0.16.4",
 		"@types/react-native-vector-icons": "^4.4.2",
+		"@types/react-navigation": "^1.0.23",
 		"react": "16.0.0",
 		"react-native": "0.50.3",
 		"react-native-elements": "^0.18.2",
-		"react-native-vector-icons": "^4.4.2"
+		"react-native-vector-icons": "^4.4.2",
+		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
