--- a/samples/18.infiniteScroll/android/app/build.gradle
+++ b/samples/18.infiniteScroll/android/app/build.gradle
@@ -95,7 +95,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    /*buildToolsVersion "23.0.1"*/
 
     defaultConfig {
         applicationId "com.infinitescroll"
