--- a/samples/13.tabbedredux/package.json
+++ b/samples/13.tabbedredux/package.json
@@ -12,12 +12,14 @@
 		"@types/react-native-vector-icons": "^4.4.2",
 		"@types/react-navigation": "^1.0.23",
 		"@types/react-redux": "^5.0.13",
+		"@types/redux-logger": "^3.0.5",
 		"react": "16.0.0",
 		"react-native": "0.50.4",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21",
 		"react-redux": "^5.0.6",
-		"redux": "^3.7.2"
+		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
