--- a/samples/13.tabbedredux/package.json
+++ b/samples/13.tabbedredux/package.json
@@ -9,11 +9,14 @@
 	"dependencies": {
 		"@types/react": "^16.0.25",
 		"@types/react-native": "^0.50.7",
+		"@types/react-native-elements": "^0.16.4",
+		"@types/react-native-vector-icons": "^4.4.2",
 		"@types/react-navigation": "^1.0.24",
 		"@types/react-redux": "^5.0.14",
 		"@types/redux-logger": "^3.0.5",
 		"react": "^16.2.0",
 		"react-native": "^0.50.4",
+		"react-native-elements": "^0.18.4",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21",
 		"react-redux": "^5.0.6",
