--- a/samples/13.tabbedredux/package.json
+++ b/samples/13.tabbedredux/package.json
@@ -21,7 +21,8 @@
 		"react-navigation": "^1.0.0-beta.21",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
-		"redux-logger": "^3.0.6"
+		"redux-logger": "^3.0.6",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
