--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "samples/4.navscreen"]
 	path = samples/4.navscreen
 	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-4.git
+[submodule "samples/5.declarations"]
+	path = samples/5.declarations
+	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-5.git
