--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "samples/6.simpleredux"]
 	path = samples/6.simpleredux
 	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-6.git
+[submodule "samples/7.counterredux"]
+	path = samples/7.counterredux
+	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-7.git
