--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "samples/10.typography"]
 	path = samples/10.typography
 	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-10.git
+[submodule "samples/11.typography"]
+	path = samples/11.typography
+	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-11.git
