--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "samples/18.infinitescroll"]
 	path = samples/18.infinitescroll
 	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-18.git
+[submodule "samples/14.reduxpersistcounter"]
+	path = samples/14.reduxpersistcounter
+	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-14.git
