--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "samples/18.infinitescroll"]
 	path = samples/18.infinitescroll
 	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-18.git
+[submodule "samples/17.swiftly"]
+	path = samples/17.swiftly
+	url = git@github.com:rodrigoelp/reactnative-typescript-exercise-17.git
