--- a/samples/19.animations-v1.0/package.json
+++ b/samples/19.animations-v1.0/package.json
@@ -3,20 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "16.0.0",
+    "react": "16.2.0",
     "react-native": "0.51.0"
   },
   "devDependencies": {
-    "babel-jest": "22.0.4",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.0.4",
-    "react-test-renderer": "16.0.0"
-  },
-  "jest": {
-    "preset": "react-native"
+    "@types/react": "^16.0.34",
+    "@types/react-native": "^0.51.9"
   }
 }
